@@ -50,6 +50,7 @@
       <listitem><para><ulink url="http://www.cszdc.com/">ComedySportz</ulink> (Washington, DC)</para></listitem>
     </itemizedlist>
   </para>
+  <para>Thanks to Derek Lane of the Raleigh Perl Mongers for suggesting the move to SQLite as a database backend.</para>
   <para>And thanks to the Open Source and Free Software movements, letting people write software that doesn't suck!</para>
   <para>Mr. Voice is dedicated to the memory of Andy Sepelak (4/4/78 - 3/11/02), a fine improviser and a good man.  He will be missed.</para>
 </dedication>
@@ -71,6 +72,7 @@
       <itemizedlist>
         <listitem><para>The MySQL database has been eliminated.  Mr. Voice now runs an embedded database, SQLite.  This means that you do not need to install, run, or configure MySQL to use Mr. Voice from the 2.0 release forward.</para></listitem>
         <listitem><para>"Invalid" songs (songs where there is an entry in the database, but no corresponding file on disk) now show up in red in the search box, instead of being hidden.  This should solve problems where you were unable to delete a category because there were still songs in it, but a search of the category revealed nothing.</para></listitem>
+        <listitem><para>AAC (Advanced Audio Codec) files, also known as .mp4 or .m4a files, are now supported (playing them requires the proper plugin for your audio player of choice).  Encrypted songs purchased from the iTunes Music Store (.m4p) apparently do not work.</para></listitem>
        </itemizedlist>
      </para>
    </sect1>
