@@ -54,7 +54,7 @@
     </sect2>
 
     <sect2><title>Songs</title>
-      <para>Songs are the audio data that you're trying to play.  You can use any sort of audio data that your audio player can handle, but Mr. Voice can figure out things like playing time for MP3, WAV, Ogg Vorbis, and WMA files.  If you're not trying to store, categorize, and play audio data, then you're probably using the wrong program!  This manual will refer to the audio data that you are storing as "songs", even though they can, of course, be any kind of audio.  To manipulate songs in the database, there are three main actions: adding songs, deleting songs, and editing songs.</para>
+      <para>Songs are the audio data that you're trying to play.  You can use any sort of audio data that your audio player can handle, but Mr. Voice can figure out things like playing time for MP3, WAV, Ogg Vorbis, AAC, and WMA files.  If you're not trying to store, categorize, and play audio data, then you're probably using the wrong program!  This manual will refer to the audio data that you are storing as "songs", even though they can, of course, be any kind of audio.  To manipulate songs in the database, there are three main actions: adding songs, deleting songs, and editing songs.</para>
       <para>To insert a new song into the database, choose <menuchoice> <guimenu>Songs</guimenu> <guimenuitem>Add New Song</guimenuitem> </menuchoice>.  A box will pop up for the needed information: 
         <figure>
 	  <title>The Add Song window</title>
@@ -85,12 +85,12 @@
 	    </textobject>
 	  </mediaobject>
 	</figure>
-	Use this to go to the location of your file, left-click on the name of the file, then click <guibutton>Open</guibutton>.  The name of the file should now be listed in the <guilabel>File To Add</guilabel> box.  If the file you are adding is an MP3, OGG, or WMA with valid tag information, it will automatically fill in the Title and Artist fields with that information.</para></listitem>
+	Use this to go to the location of your file, left-click on the name of the file, then click <guibutton>Open</guibutton>.  The name of the file should now be listed in the <guilabel>File To Add</guilabel> box.  If the file you are adding is an MP3, OGG, AAC, or WMA with valid tag information, it will automatically fill in the Title and Artist fields with that information.</para></listitem>
       <listitem><para><guibutton>Preview Song</guibutton>: Once you have selected a file, you can press this button to hear the song.  Useful for making sure you have the song you want before you add it.</para></listitem>
       </itemizedlist> 
       <para>You can now press the <guibutton>Ok</guibutton> button to add the song.  If all goes well, you should see a message that the file was added to the database.  If not, Mr. Voice should tell you what went wrong, and let you go back and fix the entry.</para>
       <note><para>Mr. Voice actually makes a copy of the file that you select, renames it to a standard form, and places the new copy in the location given by the <varname>$filepath</varname> variable that you defined in the setup.  Your original audio file is <emphasis>not</emphasis> used after the copy is made, so you can feel free to delete it.</para></note>
-      <para>It can be tedious to add songs one at a time if you have many files to add.  New in version 1.8 is the <menuchoice> <guimenu>Songs</guimenu> <guimenuitem>Bulk-Add Songs Into Category</guimenuitem> </menuchoice> menu option.  Upon choosing this, you will be prompted for a category and a directory.  Select the category, and a directory that contains the set of MP3, OGG, or WMA files that you would like to add to that category.  Mr. Voice will then use the title and artist tags stored in the files to automatically add those files into your selected category.  If you need to add Extra Info or modify any other fields, you will need to do that after the fact, but this should be a good way to add lots of data at once.</para>
+      <para>It can be tedious to add songs one at a time if you have many files to add.  New in version 1.8 is the <menuchoice> <guimenu>Songs</guimenu> <guimenuitem>Bulk-Add Songs Into Category</guimenuitem> </menuchoice> menu option.  Upon choosing this, you will be prompted for a category and a directory.  Select the category, and a directory that contains the set of MP3, OGG, AAC, or WMA files that you would like to add to that category.  Mr. Voice will then use the title and artist tags stored in the files to automatically add those files into your selected category.  If you need to add Extra Info or modify any other fields, you will need to do that after the fact, but this should be a good way to add lots of data at once.</para>
       <para>To delete a song, you must have at least one displayed and selected in the main search results box.  Searching is covered later, but if you hit the <guibutton>Do Search</guibutton> button, it should show you all of the songs in your database.</para>
       <para>Once you have some songs displayed, left-click once on the name of the song that you want to delete, or select several songs by pressing <keycap>Control</keycap> or <keycap>Shift</keycap> while selecting, then choose <menuchoice> <guimenu>Songs</guimenu> <guimenuitem>Delete Currently Selected Song</guimenuitem> </menuchoice>.  You can also right-click on the name of the song or songs and choose the <guimenuitem>Delete Song</guimenuitem> option.  A box will pop up asking you to confirm the deletion, and also presenting a checkbox labeled <guilabel>Delete File On Disk</guilabel>.   
         <figure>
